[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/fonts/The Most Beautiful Gift One Font by 7NTypes.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/img/zebra.png" type="Texture" id=2]
[ext_resource path="res://assets/img/lion.png" type="Texture" id=3]
[ext_resource path="res://assets/img/giraffe.png" type="Texture" id=4]
[ext_resource path="res://assets/img/turtle.png" type="Texture" id=5]
[ext_resource path="res://assets/img/croc.png" type="Texture" id=6]
[ext_resource path="res://assets/img/hippo.png" type="Texture" id=7]
[ext_resource path="res://scripts/main.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 43
outline_size = 2
outline_color = Color( 0.0941176, 0.160784, 0.247059, 1 )
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 58.5, 61.5 )

[sub_resource type="DynamicFont" id=4]
size = 27
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 26
outline_size = 2
outline_color = Color( 0.968627, 0.105882, 0.105882, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 36
outline_size = 2
outline_color = Color( 0.768627, 0.803922, 0.0862745, 1 )
font_data = ExtResource( 1 )

[node name="main" type="Node2D"]
script = ExtResource( 9 )

[node name="bg" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
color = Color( 0.0627451, 0.494118, 0.662745, 1 )

[node name="header" type="Label" parent="."]
margin_left = 280.0
margin_top = 12.0
margin_right = 848.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 1 )
text = "Match The Name To The Animal"

[node name="animalpngs" type="Control" parent="."]
margin_left = -2.0
margin_top = 102.0
margin_right = 38.0
margin_bottom = 142.0

[node name="zebra" type="TextureRect" parent="animalpngs"]
margin_left = 32.0
margin_top = 112.0
margin_right = 182.0
margin_bottom = 262.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true

[node name="lion" type="TextureRect" parent="animalpngs"]
margin_left = 211.0
margin_top = 114.0
margin_right = 361.0
margin_bottom = 264.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true

[node name="giraffe" type="TextureRect" parent="animalpngs"]
margin_left = 358.0
margin_top = 115.0
margin_right = 508.0
margin_bottom = 265.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true

[node name="turtle" type="TextureRect" parent="animalpngs"]
margin_left = 508.0
margin_top = 116.0
margin_right = 658.0
margin_bottom = 266.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true

[node name="croc" type="TextureRect" parent="animalpngs"]
margin_left = 669.0
margin_top = 108.0
margin_right = 819.0
margin_bottom = 258.0
mouse_filter = 2
texture = ExtResource( 6 )
expand = true

[node name="hippo" type="TextureRect" parent="animalpngs"]
margin_left = 840.0
margin_top = 108.0
margin_right = 990.0
margin_bottom = 258.0
mouse_filter = 2
texture = ExtResource( 7 )
expand = true

[node name="nameplacer" type="Node2D" parent="."]
position = Vector2( -2, 102 )

[node name="zebra" type="Area2D" parent="nameplacer"]
position = Vector2( 5, -78 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="nameplacer/zebra"]
position = Vector2( 106.5, 266.5 )
shape = SubResource( 2 )

[node name="text" type="Label" parent="nameplacer/zebra"]
visible = false
margin_left = 64.0
margin_top = 336.0
margin_right = 146.0
margin_bottom = 368.0
custom_fonts/font = SubResource( 4 )
text = "ZEBRA"

[node name="lion" type="Area2D" parent="nameplacer"]
position = Vector2( 177, -74 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="nameplacer/lion"]
position = Vector2( 106.5, 283 )
shape = SubResource( 2 )

[node name="text" type="Label" parent="nameplacer/lion"]
visible = false
margin_left = 62.0
margin_top = 334.0
margin_right = 144.0
margin_bottom = 366.0
custom_fonts/font = SubResource( 4 )
text = "LION"

[node name="giraffe" type="Area2D" parent="nameplacer"]
position = Vector2( 333, -77 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="nameplacer/giraffe"]
position = Vector2( 106.5, 283 )
shape = SubResource( 2 )

[node name="text" type="Label" parent="nameplacer/giraffe"]
visible = false
margin_left = 57.0
margin_top = 335.0
margin_right = 160.0
margin_bottom = 367.0
custom_fonts/font = SubResource( 4 )
text = "GIRAFFE"

[node name="turtle" type="Area2D" parent="nameplacer"]
position = Vector2( 485, -77 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="nameplacer/turtle"]
position = Vector2( 106.5, 283 )
shape = SubResource( 2 )

[node name="text" type="Label" parent="nameplacer/turtle"]
visible = false
margin_left = 58.0
margin_top = 333.0
margin_right = 148.0
margin_bottom = 365.0
custom_fonts/font = SubResource( 4 )
text = "TURTLE"

[node name="croc" type="Area2D" parent="nameplacer"]
position = Vector2( 636, -81 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="nameplacer/croc"]
position = Vector2( 106.5, 283 )
shape = SubResource( 2 )

[node name="text" type="Label" parent="nameplacer/croc"]
visible = false
margin_left = 40.0
margin_top = 334.0
margin_right = 181.0
margin_bottom = 366.0
custom_fonts/font = SubResource( 4 )
text = "CROCODILE"

[node name="hippo" type="Area2D" parent="nameplacer"]
position = Vector2( 800, -81 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="nameplacer/hippo"]
position = Vector2( 106.5, 283 )
shape = SubResource( 2 )

[node name="text" type="Label" parent="nameplacer/hippo"]
visible = false
margin_left = 67.0
margin_top = 335.0
margin_right = 149.0
margin_bottom = 367.0
custom_fonts/font = SubResource( 4 )
text = "HIPPO"

[node name="Timer" type="Timer" parent="."]

[node name="timeLabelHeader" type="Label" parent="."]
margin_left = 404.0
margin_top = 87.0
margin_right = 527.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 5 )
text = "TIME LEFT!"

[node name="timeLabel" type="Label" parent="."]
margin_left = 443.0
margin_top = 122.0
margin_right = 489.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="guessHeader" type="Label" parent="."]
margin_left = 472.0
margin_top = 425.0
margin_right = 659.0
margin_bottom = 456.0
custom_fonts/font = SubResource( 5 )
text = "Which One Is The"

[node name="guessName" type="Label" parent="."]
margin_left = 425.0
margin_top = 457.0
margin_right = 686.0
margin_bottom = 499.0
custom_fonts/font = SubResource( 6 )
align = 1

[node name="scoreHeader" type="Label" parent="."]
margin_left = 613.0
margin_top = 86.0
margin_right = 785.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 5 )
text = "PLAYER SCORE"

[node name="scoreText" type="Label" parent="."]
margin_left = 613.0
margin_top = 122.0
margin_right = 785.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 5 )
text = "0"

[connection signal="input_event" from="nameplacer/zebra" to="." method="_on_zebra_input_event"]
[connection signal="input_event" from="nameplacer/lion" to="." method="_on_lion_input_event"]
[connection signal="input_event" from="nameplacer/giraffe" to="." method="_on_giraffe_input_event"]
[connection signal="input_event" from="nameplacer/turtle" to="." method="_on_turtle_input_event"]
[connection signal="input_event" from="nameplacer/croc" to="." method="_on_croc_input_event"]
[connection signal="input_event" from="nameplacer/hippo" to="." method="_on_hippo_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
